[package]
name = "wasm_rust"
version = "0.1.0"
authors = ["MSakamaki <mail@m-sakamaki.jp>"]
categories = ["wasm"]
repository = "https://github.com/MSakamaki/rust-wasm"


[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = [
  # Build a cdylib to make a `.wasm` library.
  "cdylib",
  # Build an rlib for testing and benching.
  "rlib"
]

[profile.release]
# Enable this option for better time and size profiling.
# debug = true

# Optimize for small code size, rather than speed.
opt-level = "s"

# Always enable link-time optimizations to shrink binary sizes.
lto = true
